tests/security/taintSpecializedTwice/output.txt
ERROR: TaintedData - input.hack:11:6 - Detected tainted HTML tags